@@ -1,3 +1,8 @@
+2008-04-14 Og Maciel <ogmaciel@gnome.org>
+
+    * categoriesdialog.py: Ask user for confirmation before editing an existing category.
+    Patch sent by Laudeci Oliveira.
+
 2008-04-13 Og Maciel <ogmaciel@gnome.org>
 
 	* adddialog.py
